BACKEND: feat: change user rating to average recipes rating
